[gd_scene load_steps=24 format=3 uid="uid://cfnoald3s66j8"]

[ext_resource type="Script" uid="uid://dj8gw7tfgsrg2" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://b0ag8mohimwbq" path="res://Sprites/player.png" id="1_v0iea"]
[ext_resource type="AudioStream" uid="uid://b6biv6drxh51k" path="res://Sounds/jump.mp3" id="3_6t5aa"]
[ext_resource type="AudioStream" uid="uid://bqpryrrhrwodk" path="res://Sounds/bonus.mp3" id="4_vgqql"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvnsp"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 119, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("1_v0iea")
region = Rect2(120, 119, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("1_v0iea")
region = Rect2(240, 119, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("1_v0iea")
region = Rect2(360, 119, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 0, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("1_v0iea")
region = Rect2(120, 0, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("1_v0iea")
region = Rect2(240, 0, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("1_v0iea")
region = Rect2(360, 0, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("1_v0iea")
region = Rect2(480, 0, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 238, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("1_v0iea")
region = Rect2(120, 238, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("1_v0iea")
region = Rect2(240, 238, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("1_v0iea")
region = Rect2(360, 238, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 357, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("1_v0iea")
region = Rect2(120, 357, 120, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("1_v0iea")
region = Rect2(240, 357, 120, 119)

[sub_resource type="SpriteFrames" id="SpriteFrames_tx1dd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvnsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}],
"loop": true,
"name": &"Glide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}],
"loop": true,
"name": &"Jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gymyn"]
size = Vector2(17, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvnsp"]
size = Vector2(17, 20)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_cvnsp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5.68434e-14, -1)
scale = Vector2(0.5, 0.461)
sprite_frames = SubResource("SpriteFrames_tx1dd")
animation = &"Glide"
autoplay = "Idle"

[node name="Collision_Physics" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_gymyn")

[node name="Area2D" type="Area2D" parent="."]

[node name="Collision_Objects" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_cvnsp")

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6t5aa")

[node name="bonus_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vgqql")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
